Minor issue on overflow

--- a/src/components/repository/issue-item-details.module.scss
+++ b/src/components/repository/issue-item-details.module.scss
@@ -5,5 +5,4 @@
   padding: var(--space-1) var(--space-2);
   view-transition-name: var(--transition-name);
   background-color: var(--bronze-1);
-  scroll-margin: 60px;
 }
