--- a/src/components/repository/issues.module.scss
+++ b/src/components/repository/issues.module.scss
@@ -1,3 +1,7 @@
 .IssueMore {
   align-self: center;
 }
+
+.IssueAnchor {
+  scroll-margin: 80px;
+}
